eck-system.yaml
# E: Elastic
# C: Cloud
#    on 
# K: Kubernenets

# The Elastic Stack (ELK):
# E: Elasticsearch
# L: Logstash
# K: Kibana
# Beats (Filebeat, Metricbeat)

# minikube start --memory=max
# kubectl create -f https://download.elastic.co/downloads/eck/2.9.0/crds.yaml
# kubectl apply -f https://download.elastic.co/downloads/eck/2.9.0/operator.yaml
# kubectl -n elastic-system get pod elastic-operator-0
# minikube addons enable metrics-server
# kubectl apply -f eck-system.yaml (takes ~10min)
# minikube tunnel
# Go to HTTPS URL: minikube service list | grep k8s-funzone-kb-http
#   username: elastic
#   password: echo $(kubectl -n eck-system get secret k8s-funzone-es-elastic-user -o jsonpath='{.data.elastic}' | base64 --decode)
# Go to <HTTPS URL>/app/discover
apiVersion: v1
kind: Namespace
metadata:
  # The ECK operator runs by default in the elastic-system namespace.
  # It is recommended to choose a dedicated namespace for workloads, 
  # rather than using the elastic-system or the default namespace.
  name: eck-system
