service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-funzone-service
  labels:
    app: k8s-funzone
spec:
  selector:
    app: k8s-funzone
  ports:
    - name: express-index
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: express-uselessfacts
      protocol: TCP
      port: 81
      targetPort: 4000
    - name: fastapi
      protocol: TCP
      port: 82
      targetPort: 5000
  type: LoadBalancer
  externalIPs:
    - 10.108.54.131
    - 10.108.54.132
